--- a/3- Aplicações web/2 - DOM/3 - eventos/aula 01/style.css
+++ b/3- Aplicações web/2 - DOM/3 - eventos/aula 01/style.css
@@ -18,10 +18,15 @@ div{
 div:hover{
     border: 2px solid red;
 }
-.curso01{
+.c1{
     background-color: rgba(0, 0, 0, 0.122);
 }
-.curso02{
+.c2{
     background-color: rgba(0, 0, 0, 0.611);
     color: white;
+}
+.destaque{
+    background-color: rgba(255, 0, 0, 0.678) !important;
+    color: white !important;
+    border: 1px solid red !important;
 }
