--- a/3- Aplicações web/2 - DOM/4 - referenciar elementos/aula 03 - Removendo elementos/aula03.css
+++ b/3- Aplicações web/2 - DOM/4 - referenciar elementos/aula 03 - Removendo elementos/aula03.css
@@ -19,33 +19,16 @@ body{
     width: 350px;
     height: 500px;
 }
-#caixa-botao{
-    display: flex;
-    align-items: center;
-}
-#botao-transferir{
-    margin: 10px;
-    width: 150px;
-    height: 50px;
-    background-color: rgb(1, 1, 68);
-    color: white;
-    font-weight: bolder;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-#botao-transferir:hover{
-    background-color:  rgb(12, 12, 197);
-}
 
 div{
     border: 2px solid black;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    width: 130px;
-    height: 40px;
+    width: 160px;
+    height: 50px;
     margin: 10px;
+    padding: 10px;
     border-radius: 5px;
     cursor: pointer;
 }
