--- a/3- Aplicações web/2 - DOM/4 - referenciar elementos/aula 03 - Removendo elementos/aula03.css
+++ b/3- Aplicações web/2 - DOM/4 - referenciar elementos/aula 03 - Removendo elementos/aula03.css
@@ -32,8 +32,13 @@ div{
     border-radius: 5px;
     cursor: pointer;
 }
-div:hover{
-    border: 2px solid red;
+
+.botaoLixeira{
+
+    height: 45px;
+}
+.botaoLixeira:hover{
+    height: 47px;
 }
 .c1{
     background-color: rgba(0, 0, 0, 0.122);
